# product_detection_nlp

./: .gitignore  README.md  proceeding.ipynb  pyproject.toml  requirements.txt
product_detection/: __init__.py  config.py  data.py  model_conversion.py  train.py
product_detection/conf/: config.yaml
product_detection/conf/scheduler/: one_cycle.yaml  reduce_plateau.yaml
product_detection/models/: __init__.py  model.py  shell.py
tests/: prod_functions.py  some_tests.py
weights/: bpe_300.yttm
