[tool.poetry]
name = "product-detection"
version = "0.1.0"
description = ""
authors = ["Vsevolod <wsewolod@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1.4"
numpy = "^1.26.2"
torch = {version = "2.1.2+cu121", source = "pytorch"}
hydra-core = "^1.3.2"
dvc = "^3.36.1"
nltk = "^3.8.1"
pymystem3 = "^0.2.0"
lightning = "^2.1.3"
openpyxl = "^3.1.2"
ipykernel = "^6.27.1"
matplotlib = "^3.8.2"
scikit-learn = "^1.3.2"
cython = "^3.0.7"
wandb = "^0.16.1"
einops = "^0.7.0"
onnxruntime = "^1.16.3"
onnx = "^1.15.0"
python-dotenv = "^1.0.1"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
